<resources>
    <string name="app_name">METRNME</string>
    <string name="enter_username">Enter Username</string>
    <string name="come_up_with_something_new">Enter your current username or come up with something new...</string>
    <string name="register">Register</string>
    <string name="uno_momento">Uno Momento...</string>
    <string name="help_us_put_you_in_our_sustem">Help us put you in our sustem.</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="please_select_user_type">Select Musician if you wish to upload your own pre-produced tracks. Select Listener if you simply wish to explore tracks by other artists</string>
    <string name="usertype">Choose Type</string>
    <string name="musician">Musician</string>
    <string name="listener">Listener</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="select_instruments">Select Instruments</string>
    <string name="m_t_r_n_m_e">M E T R N M E</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="s_e_a_r_c_h">S E A R C H</string>
    <string name="jutt_daa_muqaabla">Jutt Daa Muqaabla</string>
    <string name="more_options">More options</string>
    <string name="umais_ameen">Umais Ameen</string>
    <string name="skrillexcited">skrillexcited</string>
    <string name="bass_guitar">Bass Guitar</string>
    <string name="str">STR</string>
    <string name="add_instrument">add instrument</string>
    <string name="add_instruments">Add Instruments</string>
    <string name="select_instruments_that_you_play_learning_to_play">Select instruments that you play/learning to play...</string>
    <string name="proceed">Proceed</string>
    <string name="settings">Settings</string>
    <string name="u_s_e_r_n_a_m_e">u s e r n a m e</string>

    <string name="put_yourself_out_there">Put yourself out there...</string>
    <string name="upload_track">Upload Track</string>
    <string name="checked">checked!</string>
    <string name="chenk" />
    <string name="library">Library</string>
    <string name="upload">UPLOAD</string>
    <string name="follow">FOLLOW</string>
    <string name="follow_button">Follow Button</string>
    <string name="upload_button">Upload Button</string>
    <string name="change_user_type">Change User Type</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="log_out">Log Out</string>
    <string name="bio">Bio</string>
    <string name="set_profile_image">Set Profile Image</string>
    <string name="user_bio">User Bio</string>
    <string name="instruments">Instruments</string>
    <string name="my_profile">My Profile</string>
    <string name="meep">--:--</string>

</resources>
