<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/pg_margin"
    android:layout_marginEnd="@dimen/pg_margin"
    android:clickable="true"
    android:id="@+id/cl_inst">

    <TextView
        android:id="@+id/iname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/bass_guitar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:text="@string/str"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iname" />


    <CheckBox
        android:id="@+id/i_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_instrument"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/chenk"/>


</androidx.constraintlayout.widget.ConstraintLayout>