<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserRegistration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pg_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginEnd="@dimen/pg_margin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/uno_momento"
                    android:textSize="@dimen/hdng_txt_size" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pg_margin"
                    android:layout_marginEnd="@dimen/pg_margin"
                    android:layout_marginBottom="@dimen/top_margin"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/help_us_put_you_in_our_sustem"
                    android:textSize="@dimen/body_txt_size" />


                <EditText
                    android:id="@+id/name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/pg_margin"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="@dimen/pg_margin"
                    android:ems="10"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/name"
                    android:textSize="@dimen/body_txt_size_large"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/age_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/pg_margin"
                    android:layout_marginEnd="@dimen/pg_margin"
                    android:ems="10"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/age"
                    android:textSize="@dimen/body_txt_size_large"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/gender_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/pg_margin"
                    android:layout_marginEnd="@dimen/pg_margin"
                    android:layout_marginBottom="40dp"
                    android:ems="10"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/gender"
                    android:textSize="@dimen/body_txt_size_large"
                    android:inputType="text"/>




                <Button
                    android:id="@+id/btn_nxt_rgstr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pg_margin"
                    android:layout_marginEnd="@dimen/pg_margin"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/next" />


            </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>