<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hdng_rgstr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pg_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginEnd="@dimen/pg_margin"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/enter_username"
            android:textSize="@dimen/hdng_txt_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pg_margin"
            android:layout_marginEnd="@dimen/pg_margin"
            android:fontFamily="@font/nunito_light"
            android:text="@string/come_up_with_something_new"
            android:textSize="@dimen/body_txt_size" />

        <EditText
            android:id="@+id/uname_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/pg_margin"
            android:layout_marginTop="@dimen/offset_wide"
            android:layout_marginEnd="@dimen/pg_margin"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:fontFamily="@font/nunito_light"
            android:textSize="@dimen/sub_hdng_size" />

        <Button
            android:id="@+id/btn_rgstr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pg_margin"
            android:layout_marginEnd="@dimen/pg_margin"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_lgn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pg_margin"
            android:layout_marginEnd="@dimen/pg_margin"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/login" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>