<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools1="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools1:context=".fragments.InstrumentFragment">


    <TextView
        android:id="@+id/inst_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pg_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/pg_margin"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/add_instruments"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/hdng_txt_size"
        />

    <TextView
        android:id="@+id/inst_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/select_instruments_that_you_play_learning_to_play"
        android:textSize="@dimen/body_txt_size_large"
        android:layout_marginStart="@dimen/pg_margin"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/btn_select_instruments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pg_margin"
        android:layout_marginEnd="@dimen/pg_margin"
        android:layout_marginBottom="@dimen/top_margin"
        android:text="@string/proceed"
        android:textColor="@color/colorAccent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instruments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pg_margin"
        android:layout_marginEnd="@dimen/pg_margin"
        />




</LinearLayout>

